Properly retreieve list of currency objects with API call.

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <div class="container">
       <h1 id="title">Give Me Mah Monayyy</h1>
 
-      <button class="btn-success" id="today">TRANSLATE DIS</button>
+      <button class="btn-success" id="getMoney">TRANSLATE DIS</button>
       <div class="showDist"></div>
     </div>
   </body>
