Update moneySorter.js to now properly calculate currency exchange.

--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Currency Exchange</title>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Currency Exchange</title>
 
-</head>
-<body>
-  <form id="formOne">
-    <div class="form-group">
-      <label for="usdVal">USD Amount:</label>
-      <input id="usdVal" class="form-control" type="number">
-    </div>
-    <div class="card" id="currency-div" class="form-group" class="radio">
-      <div class="card-body">
-        <label><u><strong>Choose a currency:</strong></u></label>
-        <select id="altCur" class="form-control">
-          <option name="AUD" value="AUD">AUD</option>
-          <option name="EUR" value="EUR">EUR</option>
-          <option name="AED" value="AED">AED</option>
-          <option name="CAD" value="CAD">CAD</option>
-          <option name="HKD" value="HKD">HKD</option>
-          <option name="JPY" value="JPY">JPY</option>
-        </select>
+  </head>
+  <body>
+    <form id="formOne">
+      <div class="container">
+        <div class="form-group">
+          <label for="usdVal"><u><strong>USD Amount: </strong></u></label>
+          <input id="usdVal" class="form-control" type="number">
+        </div>
+        <div class="card" id="currency-div" class="form-group" class="radio">
+          <div class="card-body">
+            <label><u><strong>Choose a currency:</strong></u></label>
+            <select id="altCur" class="form-control">
+              <option name="AUD" value="AUD">AUD</option>
+              <option name="EUR" value="EUR">EUR</option>
+              <option name="AED" value="AED">AED</option>
+              <option name="CAD" value="CAD">CAD</option>
+              <option name="HKD" value="HKD">HKD</option>
+              <option name="JPY" value="JPY">JPY</option>
+            </select>
+          </div>
+        </div>
+        <button class="btn-success" id="getMoney">Exchange Currency</button>
       </div>
-    </div>
-    <button class="btn-success" id="getMoney">Exchange Currency</button>
-  </form>
-  <div class="showDist"></div>
-  
-</body>
+    </form>
+    <div class="showDist"></div>
+  </body>
 </html>
