Update index.html to show new amount.

--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,12 @@
               <option name="HKD" value="HKD">HKD</option>
               <option name="JPY" value="JPY">JPY</option>
             </select>
+            <label><u><strong>New Amount is:</strong></u></label>
+            <div class="showDist"></div>
           </div>
         </div>
         <button class="btn-success" id="getMoney">Exchange Currency</button>
       </div>
     </form>
-    <div class="showDist"></div>
   </body>
 </html>
