Update main.js to try and catch anything other than 200. Still under maintenance.

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <body>
     <form id="formOne">
       <div class="container">
+        <h1>Currency Exchange</h1>
         <div class="form-group">
           <label for="usdVal"><u><strong>USD Amount: </strong></u></label>
           <input id="usdVal" class="form-control" type="number">
